# svn-notifier

./: CMakeLists.txt  README
libanjuta/: CMakeLists.txt  anjuta-command.c  anjuta-enum-types.c  anjuta-enum-types.h
libgsvn/: CMakeLists.txt  svn-command.c  svn-command.h  svn-log-command.c  svn-log-command.h  svn-update-command.h
scripts/: query-svn-log.sh
src/: CMakeLists.txt  main.c  svn-notify.c  svn-notify.h
