PROJECT(sync C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(PkgConfig REQUIRED)

IF(PKG_CONFIG_FOUND)
    PKG_CHECK_MODULES (GLIB2   REQUIRED glib-2.0 gobject-2.0 gthread-2.0)
    PKG_CHECK_MODULES (SVN_DEP REQUIRED gtk+-2.0 apr-1 apr-util-1)
ENDIF(PKG_CONFIG_FOUND)

# APR cflags
LIST(LENGTH SVN_DEP_CFLAGS NFLAG)
MATH(EXPR LASTIDX "${NFLAG} - 1")
FOREACH(idx RANGE 0 ${LASTIDX})
    LIST(GET SVN_DEP_CFLAGS ${idx} FLAG)
    SET(FLAGS "${FLAGS} ${FLAG}")
ENDFOREACH(idx)

SET(CMAKE_C_FLAGS ${FLAGS})


# Add svn include/lib
FIND_PATH(SVN_HEADER_DIR svn_client.h
    HINTS
    $ENV{SVN_DIR}
    PATH_SUFFIXES include/subversion include/subversion-1
    PATHS
    /usr
    /usr/local
    /opt
    /opt/local
)

SET(SVN_CLIENT_INCLUDE_DIRS ${SVN_HEADER_DIR})

SET(SVN_CLIENT_LIBS svn_client-1 svn_subr-1)

FIND_LIBRARY(SVN_CLIENT_LIBRARY
    NAMES ${SVN_CLIENT_LIBS}
    $ENV{SVN_DIR}
    PATH_SUFFIXES lib lib64
    PATHS
    /usr
    /usr/local
    /opt
    /opt/local
)

SET(SVN_CLIENT_LIBRARIES ${SVN_CLIENT_LIBRARY})

ADD_SUBDIRECTORY(libanjuta)
ADD_SUBDIRECTORY(libgsvn)
ADD_SUBDIRECTORY(src)

